styles/nav.css
.navbar-fixed {
    top: 0;
    z-index: 100;
    position: fixed;
    width: 100%;
}

#nav_bar {
    background-color: #888;
}

nav ul {
    list-style: none;
    background-color: #888;
    text-align: right;
    margin: 0;
}

nav img {
    float: left;
    clear: both;
    padding: 5px;
    margin-left: 10px;
    background-color: #888;
}

/*
nav ul li:first-child {
    display: flex;
    float: left;
    clear: both;
    padding: 5px;
}
*/

nav a, nav .dropdown {
    text-decoration: none;
    color: #fff;
    display: block;
    transition: .3s background-color;
    padding: 0 10px;
}
 
nav a:hover, nav a:focus, nav .dropdown:hover, nav .dropdown:focus {
    text-decoration: none;
    font-weight: bold;
    color: #fff;
    background-color: #a9a9a9;
}
 
nav a.active, nav .dropdown.active {
    text-decoration: none;
    font-weight: bold;
    background-color: #a9a9a9;
    color: #fff;
    cursor: default;
}
 

nav li {
    min-width: 120px;
    border-bottom: none;
    min-height: 50px;
    line-height: 50px;
    font-size: 1.2em;
    text-align: center;
}
 

nav li {
    display: inline-block;
/*
    padding-left: 1em;
    padding-right: 1em;
*/
}

header {
    text-align: center;
}

li.dropdown {
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #888;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    color: #f8f8ff;
    padding: 0 10px;
    text-decoration: none;
    display: block;
    text-align: left;
    font-size: .75em;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.hamburger{
    background:none;
    position:absolute;
    top:0;
    right:0;
    line-height:50px;
    padding:0 15px;
    color:#fff;
    border:0;
    font-size:1.4em;
    font-weight:bold;
    cursor:pointer;
    outline:none;
    z-index:100;
    display: none;
    visibility: hidden;
}
.cross{
    background:none;
    position:absolute;
    top:0;
    right:0;
    padding:0 15px;
    color:#fff;
    border:0;
    font-size:3em;
    line-height:50px;
    font-weight:bold;
    cursor:pointer;
    outline:none;
    z-index:100;
    display: none;
    visibility: hidden;
}

.menu {
    display: block;
}

@media screen and (max-width: 920px){
    nav li {
        display: inline-block;
        width: 100%;
    }
    
    nav ul {
        padding: 0;
    }
    
    .hamburger {
        display: block;
        visibility: visible;
    }
    
    .cross {
        visibility: visible;
    }
    
    .menu {
        display: none;
/*        visibility: hidden;*/
    }
}
/*

@media screen and (max-width: 600px){
    nav li {
        display: inline-block;
        width: 100%;
    }
    
    nav ul {
        padding: 0;
    }
}*/

